--- a/_posts/2020-01-02-post1.markdown
+++ b/_posts/2020-01-02-post1.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: 2020 동계 모각코 계획
 date: 2020-01-02 19:20:23 +0900
-category: sample
+category: 2020 동계 모각코
 ---
 # 모각코 계획
 > 2020 동계 모각코 계획
