--- a/_posts/2020-01-02-post1.markdown
+++ b/_posts/2020-01-02-post1.markdown
@@ -9,10 +9,8 @@ category: sample
 > 팀원: 한승훈, 박지우, 류건열, 김남호
 
 ## 목표
-1. 백준 알고리즘 문제 풀이
+- 백준 알고리즘 문제 풀이
 - 사용언어 : c++
-2. MLP 온라인 교육 컨텐츠 수강
-- 인공지능 강의
 
 ## 계획
 - 1차)
@@ -32,9 +30,3 @@ greedy 문제 풀기
 
 - 6차)
 완전탐색(exhaustive search) 문제 풀기
-
-- 7차)
-MLP 온라인 교육 컨텐츠 수강
-
-- 8차)
-MLP 온라인 교육 컨텐츠 수강
