--- a/_posts/2020-01-02-post1.markdown
+++ b/_posts/2020-01-02-post1.markdown
@@ -12,7 +12,7 @@ category: sample
 2020.12.23(수) ~ 2021.02.16(수) 중 6회 이상
 
 ## 목표
-- 백준 알고리즘 문제 풀이
+- 알고리즘 복습을 위한 백준 문제 풀이
   + 사용언어 : c++
 - MLP 온라인 교육 컨텐츠 수강
 
