--- a/_posts/2018-02-20-readme.md
+++ b/_posts/2018-02-20-readme.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Readme"
 date:   2018-02-20 21:00
-category: category2
+category: mogakco
 icon: git
 keywords: tag1, tag2
 image: 1.jpg
@@ -36,9 +36,9 @@ preview: 0
 8. [Donate](#donate)
 9. [Copyright and license](#copyright-and-license)
 
-## Installation 
+## Installation
 1. Download, clone or fork repo `git clone git@github.com:vikapitoshka/blog.git`
-2. Enter the folder: `cd blog/` 
+2. Enter the folder: `cd blog/`
 3. Start Jekyll server: `jekyll s`
 
 Access, [localhost:4000](http://localhost:4000)
@@ -50,7 +50,7 @@ If you have any questions please ask me at [GitHub Issues](https://github.com/vi
 
 ## Content management
 ### Template
-Template of posts setting is in `_drafts/template.md`. `Layout` is always named `post`. `Title` is a title of post, writing in quotation marks. `Date` written in the following format: `yyyy-mm-dd hh:mm`. In `category` specifies one category. In `icon` written the name of icon (its in the folder `images`). In `tags` is possible to write multiple tags using a comma. In `image` specify the path to image preview (can not fill). And in `preview` you can write `0` to on the main page didn't show the announcement of the post. 
+Template of posts setting is in `_drafts/template.md`. `Layout` is always named `post`. `Title` is a title of post, writing in quotation marks. `Date` written in the following format: `yyyy-mm-dd hh:mm`. In `category` specifies one category. In `icon` written the name of icon (its in the folder `images`). In `tags` is possible to write multiple tags using a comma. In `image` specify the path to image preview (can not fill). And in `preview` you can write `0` to on the main page didn't show the announcement of the post.
 
 More details about all features and setting can be view on [here](#features).
 
@@ -72,7 +72,7 @@ If you want to add a page of category you have to create folder with name of cat
 ---
 layout: default
 title: Category1
-permalink: /category1/ 
+permalink: /category1/
 ---
 
 {% include category.html %}
@@ -93,7 +93,7 @@ I use [HyperComments](http://hypercomments.com) instead of other tool, Disqus, s
 For categories I use svg-icons in `images`. Еhe icon is automatically assigned to the post by its category. The icon name must be `category_name.svg`.
 
 ### Post Image
-All images used in posts that are in `post-image` and its are categorized. For example, images in post of category1's category is in `post-img/category1`. 
+All images used in posts that are in `post-image` and its are categorized. For example, images in post of category1's category is in `post-img/category1`.
 
 ### Featured image
 You can specify the preview image for post in [YAML Front Matter](http://jekyllrb.com/docs/frontmatter/). In front matter called "image" to indicate the name of the image. The picture must be located in a category folder.    
@@ -102,7 +102,7 @@ For example, we write post of category_name's category. In folder `post-img/cate
 Also, in front matter you can control the announcement of record post. By default, the announcement consists of 35 words. Writing in the front matter called "preview" the number 0, the announcement will not be displayed for this entry. [Example](https://github.com/ViKapitoshka/blog/blob/master/_posts/2017-06-08-learn-git4.md).
 
 ### Edit link
-All posts can be edited by users through link: `github.com/vikapitoshka/blog/edit/master/{{ page.path }}` or `github.com/vikapitoshka/blog/edit/master/{{ post.path }}`. 
+All posts can be edited by users through link: `github.com/vikapitoshka/blog/edit/master/{{ page.path }}` or `github.com/vikapitoshka/blog/edit/master/{{ post.path }}`.
 
 ### Web analytics
 I use [Yandex Metrika](https://metrika.yandex.ru) to do web analytics, you can choose either to realize it, just paste your code in `includes/analytics.html`.
