--- a/_posts/2021-01-06-week2.markdown
+++ b/_posts/2021-01-06-week2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: 2주차 모각코
 date: 2021-01-06 20:10:00 +0900
-category: sample
+category: mogakco
 ---
 # 목표
 
@@ -19,7 +19,7 @@ category: sample
 
 2. 그래프(DFS, BFS) 백준 문제풀기 :
  - 그래프(DFS, BFS) 문제 중 1260번을 풀었다.  
- 
+
 
  - 1260번은 DFS, BFS를 구현하는 문제였다.
 학기중에 이미 배운 내용이였기 때문에 큰 문제 없이 풀수있을 것이라고 생각하였고, 몸풀기 용으로 선택한 문제였디만 원하는대로 잘 풀리지 않았고, 주로 사용하던 비주얼 스튜디오가 아닌 셸을 사용하여 코딩하였더니 익숙치 않아서 생각보다 오랜 시간이 걸렸다.
