--- a/_posts/2021-01-06-week2.markdown
+++ b/_posts/2021-01-06-week2.markdown
@@ -24,4 +24,4 @@ category: mogakco
  - 1260번은 DFS, BFS를 구현하는 문제였다.
 학기중에 이미 배운 내용이였기 때문에 큰 문제 없이 풀수있을 것이라고 생각하였고, 몸풀기 용으로 선택한 문제였디만 원하는대로 잘 풀리지 않았고, 주로 사용하던 비주얼 스튜디오가 아닌 셸을 사용하여 코딩하였더니 익숙치 않아서 생각보다 오랜 시간이 걸렸다.
 DFS는 재귀함수를 이용하여 풀이를 하였으며 BFS는 큐를 이용하여 풀이를 하였다.
- ![캡처1](/public/img/9EF9C994-1599-48A1-B397-1D00CDF10B97.png)  
+ ![image](https://user-images.githubusercontent.com/34561570/104176862-3dbcdd00-544b-11eb-9d43-a56fdf461d4f.png)
