--- a/_posts/2021-01-13-week3.markdown
+++ b/_posts/2021-01-13-week3.markdown
@@ -8,3 +8,27 @@ category: mogakco
 
 + MLP 수강 1시간 수강
 + binary search / ternary search 문제 풀기
+
+
+# 회고
+
+1. MLP 수강 1시간 수강 :
+- Azure에 대한 설명을 들었다.
+
+
+2. binary search / ternary search 문제 풀기
+- 백준에서 1654번, 11662번을 시도하였다.
+
+
+- 1654번은 기초적인 이분탐색 문제로서 k개의 랜선을 잘라 최소 n개의 랜선으로 만들수 있는 랜선길이의 최대 값을 구하는 문제이다.
+left를 0, k개의 랜선중 가장 긴 랜선의 길이를 right값으로 하여 mid = (left+right)/2로 설정하고, 이 mid값으로 k개의 랜선을 각각 잘랐을 때 n개 이상이 나오면 [mid+1, right]구간에 대해 위의 과정을 다시 실행한다. 만약 n개 이상이 나오지 않으면 [0,mid-1]구간에 대해 실행한다.
+이 과정을 left가 right보다 커지기 전까지 반복한다.
+
+ ![image](https://user-images.githubusercontent.com/34561570/104462567-18b79e00-55f4-11eb-929f-ac7580143d71.png)
+
+- 11662번은 삼분탐색 문제이다.
+우선, 삼분탐색에 대해서 간단하게 설명을 하겠다.
+이분탐색이 구간을 두개로 나누어 탐색을 하는 방법이였다면, 삼분탐색은 구간을 3개로 나누어 탐색을 하는 방법이다.
+이분탐색은 값들이 증가하거나 감소만 하는 일차함수 그래프 형식에서 유용하게 사용되지만, 이차함수 그래프 형식과 같이 증가하기도 하고 감소하기도 하는 형식에서 유용하다고 한다.
+
+11662번 문제는 삼분탐색을 이해하는 과정에서 시간이 지체되어 풀이를 완성하지 못하였다.
